|
Quick Lists
|
|
Bug ID:
|
6809798
|
|
Votes
|
0
|
|
Synopsis
|
SafePointScalarObject node placed into incorrect block during GCM
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
b10
|
|
Release Fixed
|
hs15(b03),
7(b51) (Bug ID:2174483)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
25-FEB-2009
|
|
Description
|
Running server VM fastdebug build with -XX:+DoEscapeAnalysis could lead to:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\sched.cpp:2293
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\...\sources\hotspot\src\share\vm\opto\sched.cpp:2293), pid=4076, tid=2156
# Error: assert(prev_selected_node != chosen_node,"Trace_Sched::select_node is in an infinite loop")
#
The code inspection has shown that the bug is in common code.
Posted Date : 2009-02-25 09:56:13.0
This assert happened in the new port sources.
Also it is not a big problem - the only condition to generate correct code
is to have SafePointScalarObject node referencing only one Safepoint node
for which it was created. And this is why there was the fix to make it pinned.
Posted Date : 2009-02-26 00:02:44.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/523ded093c31
Posted Date : 2009-02-27 00:55:51.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |