6809798: SafePointScalarObject node placed into incorrect block during GCM

Replace the control edge of a pinned node before scheduling.

Reviewed-by: never